wip issue 12171. Java Sealed Classes
[skip ci]

`partest test/files/neg/t12171`